fix to mail list container not fiting mails width to all platforms

--- a/assets/css/apps/mail/cmps/MailPreview.css
+++ b/assets/css/apps/mail/cmps/MailPreview.css
@@ -141,7 +141,7 @@ tr:hover {
 }
 
 .delete-icon {
-  width: 1.375em;
+  width: 1.5em;
 }
 
 .unread-btn {
@@ -157,7 +157,7 @@ tr:hover {
 }
 
 .unread-icon {
-  width: 1.375em;
+  width: 1.5em;
 }
 
 .unread-icon:hover {
@@ -169,7 +169,7 @@ tr:hover {
 }
 
 .read-icon {
-  width: 1.375em;
+  width: 1.5em;
 }
 
 .read-icon:hover {
